--- a/app/src/main/res/layout/fragment_total_steps.xml
+++ b/app/src/main/res/layout/fragment_total_steps.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.demo2.TotalSteps">
+    tools:context="com.example.myapplication.TotalSteps">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
