--- a/app/src/main/res/layout/statistics.xml
+++ b/app/src/main/res/layout/statistics.xml
@@ -70,6 +70,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="OK"/>
+        android:text="@string/ok"/>
 
 </LinearLayout>
